# Solana-learning

./: .gitignore  DEVLOG.md  README.md
.claude/: settings.local.json
frontend/: mint-to-phantom-vault.mjs  package-lock.json  package.json  test-withdraw-pair.mjs
frontend/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: AddPairModal.tsx  DepositWithdraw.tsx  EmptyState.tsx  Header.tsx  Hero.tsx  PairsTable.tsx  Skeleton.tsx  Tooltip.tsx  VaultCard.tsx  WalletProvider.tsx  WithdrawPairModal.tsx
frontend/lib/: idl.ts  prices.ts  program.ts  toast.ts
my_solana_project/: Anchor.toml  package-lock.json  package.json
my_solana_project/app/: jupiter_bot.ts
my_solana_project/programs/my_solana_project/: Cargo.toml
my_solana_project/programs/my_solana_project/src/: error.rs  instructions.rs  lib.rs  state.rs
my_solana_project/programs/my_solana_project/src/instructions/: add_pair.rs  deposit.rs  execute_swap.rs  initialize.rs  read_pool.rs  set_vault_active.rs  swap.rs  toggle_pair.rs  withdraw.rs  withdraw_pair_tokens.rs
my_solana_project/programs/my_solana_project/tests/: pair_management.rs  test_initialize.rs  vault_lifecycle.rs  withdraw_pair_tokens.rs
my_solana_project/programs/my_solana_project/tests/common/: mod.rs
my_solana_project/tests/: vault_test.ts
